// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseFile() Should parse basic table correctly 1`] = `
FileDeclarations {
  "declarations": Array [
    Table {
      "body": TableBody {
        "lines": Array [
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
              "primaryKey": true,
            },
            "name": "id",
            "type": ColumnType {
              "args": Array [],
              "name": "bigint",
            },
          },
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
            },
            "name": "lineNumber",
            "type": ColumnType {
              "args": Array [],
              "name": "smallint",
            },
          },
          ColumnDefinition {
            "constraints": ColumnConstraints {},
            "name": "productName",
            "type": ColumnType {
              "args": Array [
                Literal {
                  "intLiteral": 255,
                },
              ],
              "name": "varchar",
            },
          },
          ColumnDefinition {
            "constraints": ColumnConstraints {},
            "name": "price",
            "type": ColumnType {
              "args": Array [
                Literal {
                  "intLiteral": 18,
                },
                Literal {
                  "intLiteral": 10,
                },
              ],
              "name": "decimal",
            },
          },
        ],
      },
      "header": TableHeader {
        "name": "Products",
      },
    },
  ],
}
`;

exports[`parseFile() Should parse file with two tables correctly 1`] = `
FileDeclarations {
  "declarations": Array [
    Table {
      "body": TableBody {
        "lines": Array [
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
              "primaryKey": true,
            },
            "name": "id",
            "type": ColumnType {
              "args": Array [],
              "name": "string",
            },
          },
        ],
      },
      "header": TableHeader {
        "name": "TheFirst",
      },
    },
    Table {
      "body": TableBody {
        "lines": Array [
          ColumnDefinition {
            "constraints": ColumnConstraints {
              "notNull": true,
              "primaryKey": true,
            },
            "name": "id2",
            "type": ColumnType {
              "args": Array [],
              "name": "bigint",
            },
          },
        ],
      },
      "header": TableHeader {
        "name": "theSecond",
      },
    },
  ],
}
`;
